# c-opengl

./: .gitignore  README.md  meson.build
include/glad/: glad.h
lib/cglm/: libcglm.so.0.9.4
shaders/: fragment-shader.glsl  vertex-shader.glsl
src/: glad.c  main.c  meson.build  shader.c  shader.h  utils.c  utils.h
src/shaders/: fragment-shader.glsl  meson.build  vertex-shader.glsl
textures/: meson.build
